--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 @import "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
 
-body{background-color: #9fe2ed;}
+body{background-color: #479BDA;}
 
 .circular-menu {
   width: 250px;
@@ -41,11 +41,50 @@ body{background-color: #9fe2ed;}
   -transform: scale(1);
 }
 
+.circle a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  margin-left: -20px;
+  margin-top: -20px;
+  position: absolute;
+  text-align: center;
+}
+
+.circle a:hover {
+  color: #eef;
+}
+
+.menu-button {
+  position: absolute;
+  top: calc(50% - 30px);
+  left: calc(50% - 30px);
+  text-decoration: none;
+  text-align: center;
+  color: #444;
+  border-radius: 50%;
+  display: block;
+  height: 40px;
+  width: 40px;
+  line-height: 40px;
+  padding: 10px;
+  background: #dde;
+}
+
+.menu-button:hover {
+  background-color: #eef;
+}
+
+//daqui para baixo tags convencionais
 h1{ font-family: Verdana;}
 
 table{border: 0px;
       background-color: #6eb79a;
 }
+
 th{background-color: #96f2da;}
 
 td{background-color: #9feeff}
@@ -60,6 +99,7 @@ td{background-color: #9feeff}
          alignment-adjust: central;
 }
 
+/*
 #menuP{background-color: #96f2da}
 
 .botao{
@@ -69,7 +109,6 @@ td{background-color: #9feeff}
     background-color: #1633d8;
     border-radius: 5px;
     margin-top: 2px;
-    
 }
 
 div a{
@@ -82,3 +121,4 @@ div a:hover{
     text-decoration: none;
 }
 
+*/
